# LibCLog

./: CMakeLists.json  CMakeLists.txt  LibCLog.code-workspace  README.md  daemon  daemon.cpp  fileio.txt  filememmgmt.txt  libc_interceptor.cpp  libclog_0.8_linux_amd64.deb  test_interceptor.sh  unit_test  unit_test.cpp
